--- a/src/main/webapp/css/estilo.css
+++ b/src/main/webapp/css/estilo.css
@@ -803,6 +803,7 @@ footer .content {
     margin-top: 100px;
     margin-right: 50px;
     margin-left: 100px;
+    margin-bottom: 100px;
 }
 .movieItem img{
     width: 130px;
@@ -825,13 +826,14 @@ footer .content {
     /*border: 0 0.5px 0.5px 0 solid gray;*/
     border-radius: 10px;
     margin: 40px 40px 40px 40px;
-
     text-transform: uppercase;
 
     box-shadow: 0 0 3px rgba(0,0,0,0.2);
     line-height: 1.1;
     color: inherit;
 }
+
+
 .movieItem h4{
     font-size: 18px;
     position: relative;
@@ -840,13 +842,44 @@ footer .content {
     font-weight: 500;
 }
 
+
+
+
+
+
+
+.movieItemNormal{
+    width: 134px;
+    height: 215px;
+    background-color: black;
+    text-align: center;
+    border: 0.5px solid #166dab ;
+    /*border: 0 0.5px 0.5px 0 solid gray;*/
+    border-radius: 10px;
+    margin: 10px 15px 10px 15px;
+    text-transform: uppercase;
+
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    line-height: 1.1;
+    color: inherit;
+}
+
+.movieItemNormal h4{
+    font-size: 18px;
+    position: relative;
+    top: 5px;
+
+    font-weight: 500;
+}
+
+.movieItemNormal img{
+    width: 130px;
+    height: 180px;
+    border-radius: 10px 10px 0 0;
+}
 .cantidadPelículas{
 
 }
-
-
-
-
 
 
 
